tests/baselines/reference/ClassDeclaration10(strict=true).errors.txt
ClassDeclaration10.ts(2,4): error TS2390: Constructor implementation is missing.
ClassDeclaration10.ts(3,4): error TS2391: Function implementation is missing or not immediately following the declaration.
ClassDeclaration10.ts(3,4): error TS7010: 'foo', which lacks return-type annotation, implicitly has an 'any' return type.


==== ClassDeclaration10.ts (3 errors) ====
    class C {
       constructor();
       ~~~~~~~~~~~~~~
!!! error TS2390: Constructor implementation is missing.
       foo();
       ~~~
!!! error TS2391: Function implementation is missing or not immediately following the declaration.
       ~~~
!!! error TS7010: 'foo', which lacks return-type annotation, implicitly has an 'any' return type.
    }